--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
     <footer></footer>
   </article>
   <footer></footer>
-  <script src="./bundle.js"></script>
+  <div id = "columns"></div>
+  <!-- <div id = "columns2"></div>
+  <div id = "columns3"></div> -->
+  <script src="./scripts/collums.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
