first commit of forked branch

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,10 @@
     <footer></footer>
   </article>
   <footer></footer>
-  <div id = "columns"></div>
-  <!-- <div id = "columns2"></div>
-  <div id = "columns3"></div> -->
-  <script src="./scripts/collums.js"></script>
-  <script src="./scripts/main.js"></script>
+  <!-- <div id = "columns"></div>
+  <input type='text' id='id1' /> -->
+  <div id = "card"></div>
+
   <script src="./bundle.js"></script>
 
 
